assembly *.tar.gz